<resources>
    <string name="app_name">Comércio Express</string>
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>
    <string name="action_settings">Opções</string>
    <string name="tipopessoa">Tipo Pessoa</string>
    <string name="rz_social">Razão Social</string>
    <string name="nm_fantasia">Nome Fantasia</string>
    <string name="cnpj">CNPJ</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Número</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="telefoneadicional">Telefone Adicional</string>
    <string name="fax">Fax</string>
    <string name="complemento">Complemento</string>
    <string name="cep">CEP</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="nmcontato">Contato</string>
    <string name="tipcliente">Tipo do Cliente</string>
    <string name="classificacao">Classificação</string>
    <string name="inscestadual">Inscrição Estadual</string>
    <string name="btn_cadastrar"><b>Cadastrar</b></string>
    <string name="btn_alterar"><b>Alterar</b></string>
    <string name="btn_cancelar"><b>Cancelar</b></string>
    <string name="btn_sincronizar">Sincronizar</string>
    <string name="btn_trocarusuario">Trocar Usuário</string>
    <string name="btn_atualizardados">Atualizar Dados</string>
    <string name="btn_excluir">Excluir Produto</string>
    <string name="btn_trocafilial">Trocar Filial</string>
    <string name="title_activity_cliente">Comércio Express</string>
    <string name="title_activity_login">Comércio Express</string>
    <string name="prompt_email">Usuário</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Senha inválida</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Favor informar o usuário!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sincronizar">Sincronizar</string>
    <string name="dtsincronizar">Ultima sincronização: <br />11/12/2015</string>
    <string name="statussincronizar">Sincronizando...</string>
    <string-array name="estados_array">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>RE</item>
        <item>TO</item>
    </string-array>
    <string-array name="tipocliente_array">
        <item>GERAL</item>
    </string-array>
    <string-array name="tipoclienteexpress_array">
        <item>X ANTIGOS - SUPER LIGHT</item>
        <item>X ANTIGOS - PONTO FAR LIGHT</item>
        <item>INDICADORES</item>
        <item>EXPRESS NF-E PLANO</item>
        <item>X ANTIGOS - PLANO</item>
        <item>MAILING</item>
        <item>EXPRESS AUTORIZADA</item>
        <item>EXPRESS NF-E AUTORIZADA</item>
        <item>AUTORIZADAS</item>
        <item>EXPRESS PLANO</item>
        <item>X ANTIGOS - LIGTH</item>
        <item>X ANTIGOS - PONTO FAR</item>
        <item>X ANTIGOS - PONTO FAR DELIVERY</item>
        <item>SOLUTION PARTNER</item>
        <item>EXPRESS NFC-E PLANO</item>
        <item>EXPRESS NFC-E AUTORIZADA</item>
        <item>LEADS</item>
        <item>SEM VALIDACAO</item>
        <item>A PROSPECT</item>
    </string-array>
    <string-array name="tipopessoa_array">
        <item>Física</item>
        <item>Jurídica</item>
    </string-array>
    <string name="title_activity_pedidos">Pedidos</string>
    <string name="title_activity_teste_web_service">TesteWebService</string>
    <string name="title_activity_opcoes">Opções</string>
    <string name="title_activity_atualizar_dados">Atualizar Dados</string>
    <string name="title_activity_cadastro_clientes">Cadastro de Clientes</string>
    <string name="mensagemlogin">Para realizar o acesso ao aplicativo é necessário que haja conexão com a internet.</string>
    <string name="title_activity_produtos">Produtos</string>
    <string name="title_activity_cadastro_produtos">Cadastro de Produtos</string>
    <string name="title_activity_manutencao_pedidos">Pedido</string>
    <string name="title_activity_selecao_cliente">Selecionar Cliente</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_adicionar_produtos">AdicionarProdutos</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_adicionar_produtos_customizada">Adicionar Produtos</string>
    <string name="title_activity_manutencao_produto_pedido">Produto</string>
    <string name="title_activity_filial">Filial</string>
    <string name="versao">3.0</string>
    <string name="menu_salvar">Salvar</string>
    <string name="menu_excluir">Excluir</string>
    <string name="title_activity_visao_geral_completa">Visão Geral</string>
    <string name="campo_visaogeral_valor_venda_bruta">Pedido bruto:</string>
    <string name="campo_visaogeral_valor_descontos">Descontos:</string>
    <string name="campo_visaogeral_valor_liquido">Pedido liquido:</string>
    <string name="campo_visaogeral_lucro_medio">Lucro médio:</string>
    <string name="label_quantidade_tipovenda_pedido">Número de pedidos em aberto: </string>
</resources>