<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_sincronizar"
    tools:context="com.example.desenvolvimento.navigationdrawercomercioexpress.Sincronizar">

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dtsincronizar"
        android:id="@+id/lb_dtsincrinizar"
        android:textColor="@color/black"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_gravity="center" />

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sincronizar"
        android:id="@+id/btn_sincronizar"
        android:layout_below="@+id/lb_dtsincrinizar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_alignRight="@+id/lb_dtsincrinizar"
        android:layout_alignEnd="@+id/lb_dtsincrinizar"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/estilo_botao"/>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btn_sincronizar" />

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/statussincronizar"
        android:id="@+id/lb_status"
        android:textColor="@color/black"
        android:layout_below="@+id/progressBar1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:visibility="invisible"
        android:layout_gravity="center" />

</RelativeLayout>
