<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_opcoes"
    tools:context="com.example.desenvolvimento.navigationdrawercomercioexpress.Opcoes">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tb_usuarioOpcoes"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />


    <Button android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_trocarusuario"
        android:id="@+id/sc_trocarUsuario"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/estilo_botao"
        android:layout_below="@+id/tb_usuarioOpcoes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Última Sincronização:"
        android:id="@+id/lb_ultimaatualizacao"
        android:layout_below="@+id/sc_trocarUsuario"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/lb_ultimaatualizacaoData"
        android:layout_below="@+id/lb_ultimaatualizacao"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp" />

    <Button android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_sincronizar"
        android:id="@+id/sc_atualizardados"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/estilo_botao"
        android:layout_below="@+id/lb_ultimaatualizacaoData"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Filial:"
        android:id="@+id/lb_filialselecionada"
        android:layout_below="@+id/sc_atualizardados"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp" />

    <Button android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_trocafilial"
        android:id="@+id/sc_trocafilial"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/estilo_botao"
        android:layout_below="@+id/lb_filialselecionada"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/versao"
        android:id="@+id/lb_versao"
        android:layout_below="@+id/sc_trocafilial"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp" />

</RelativeLayout>
